# lmms

./: .gitignore  .travis.yml  CMakeLists.txt  vcpkg_deps
.circleci/: config.yml
.github/workflows/: build.yml  checks.yml  ci.yaml
.travis/: after_script.sh  install.sh  linux..before_install.sh  linux..install.sh  linux..script.sh  linux.install.sh  linux.script.sh  linux.win32.before_install.sh  linux.win32.script.sh  linux.win64.before_install.sh  linux.win64.script.sh  osx..before_install.sh  osx..install.sh  osx..script.sh  osx.install.sh  osx.script.sh  script.sh
buildtools/: docker.sh
buildtools/docker/: build-image.sh  run.sh  start.sh  stop.sh
buildtools/scripts/: configure.sh  dependencies.sh  install-dependencies.sh  make.sh  package.sh
cmake/install/: CMakeLists.txt
cmake/modules/: BuildPlugin.cmake  CheckPerlModules.cmake
include/: AudioDevice.h  AudioDummy.h  ComboBoxModel.h  Mixer.h  MixerView.h  Song.h  export.h  fft_helpers.h
plugins/CarlaBase/: Carla.cpp
plugins/DualFilter/: DualFilterControlDialog.cpp
plugins/MidiExport/: MidiExport.cpp
plugins/MidiImport/: CMakeLists.txt
plugins/Monstro/: Monstro.cpp  Monstro.h
plugins/OpulenZ/: CMakeLists.txt
plugins/ReverbSC/: base.h  dcblock.h  revsc.h
plugins/SpectrumAnalyzer/: SaControls.h  SaControlsDialog.cpp
plugins/Xpressive/: CMakeLists.txt
plugins/ZynAddSubFx/: CMakeLists.txt
plugins/vst_base/: CMakeLists.txt
src/: CMakeLists.txt
src/common/: SharedMemory.cpp
src/core/: ComboBoxModel.cpp  Mixer.cpp  Song.cpp
src/gui/: GuiApplication.cpp  LinkedModelGroupViews.cpp  (+3 more)
(+34 files in other folders)
